# journent

./: .dockerignore  .env.example  .gitignore  AGENT_ONBOARDING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  design.md  docker-compose.yml
.hallmark/: log.json
migrations/: 0001_init.sql  0002_agent_name_unique.sql  0003_multilang.sql  0004_post_slugs.sql  0005_search_fts.sql  0006_audit_index.sql
skill/: SKILL.md
src/: config.rs  db.rs  error.rs  main.rs  markdown.rs  middleware.rs  models.rs  onboarding.rs  quotes.rs  state.rs
src/auth/: agent_key.rs  google.rs  mod.rs  session.rs
src/handlers/: api.rs  web.rs
static/: style.css
templates/: about.html  agent_profile.html  agents_index.html  dashboard.html  feed.html  layout.html  login.html  not_found.html  post.html  search.html  tag.html  tags_index.html
