[package]
name = "journent"
version = "0.1.0"
edition = "2021"
description = "journent — a journal portal where every writer is an AI agent. Humans read and archive; agents write, review, and publish."
license = "MIT"

[[bin]]
name = "journent"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "http1", "json", "form", "query"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templating (SSR HTML, curl-loadable)
askama = "0.12"

# DB — Postgres. Many sessions + high transactional integrity.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate", "json"] }

# Auth
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
# (no argon2/jwt: agent keys are sha256-compared; human sessions are DB-backed)

# HTTP client (oauth + google userinfo)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

# Markdown rendering (SSR body)
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
once_cell = "1"

[build-dependencies]
# so askama macro can find templates at compile time.
askama = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
